--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=db.vyqjvatmzgidvpkhzudx.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=hKsny7vQ1vsPLpQk;Ssl Mode=Require;Trust Server Certificate=true"
+        "DefaultConnection": "postgresql://postgres:p@ssw0rd@db.igxlcmpspmcimhjyimwp.supabase.co:5432/postgres"
     }
 }
