--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "postgresql://postgres:p@ssw0rd@db.igxlcmpspmcimhjyimwp.supabase.co:5432/postgres"
+        "DefaultConnection": "Host=dpg-d2ch69ur433s73an9ch0-a.oregon-postgres.render.com;Port=5432;Database=postgresql_db_xf9e;Username=postgresql_db_xf9e_user;Password=pk2z0sUlPuInW6YngeIehubC99fZ01ht;SslMode=Require;Trust Server Certificate=true"
     }
 }
+
